# Code_Cobra

./: .env.example  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  Step-by-step.md  autonomous_ensemble.py  claude.md  coding_guide.txt  docker-compose.yml  logging_config.py  monitoring.py  post_coding_guide.txt  pyproject.toml  requirements-dev.txt  requirements.txt  telemetry.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
config/: dev.json  prod.json  stage.json
docs/: API.md  ARCHITECTURE.md  FAQ.md  SECURITY.md  USER_STORIES.md
scripts/: backdoor_check.py  deploy.sh  rollback.sh  setup.sh
tests/: __init__.py  run_regression.py  test_acceptance.py  test_core.py  test_dynamic.py  test_exploits.py  test_integration.py  test_performance.py  test_security.py
